Updated SACR Rig
Also removed the ZIP file for LACM

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
   <div class="dev-warning">
     <h2>ATTENTION</h2>
-    <p>A pre-release version of the SACR Wiki has been released, be sure to check it out <a
-        href="sacr-wiki/wiki.html">here</a></p>
+    <p>The SACR Rig has been updated to Release 5, go check it out <a
+        href="sacr-rig.html">here</a></p>
   </div>
   <!-- Side Navigation -->
   <div class="sideNav" id="sideNav">
