--- a/sacr-rig.html
+++ b/sacr-rig.html
@@ -21,8 +21,9 @@
 <body>
   <div class="dev-warning">
     <h2>ATTENTION</h2>
-    <p>A pre-release version of the SACR Wiki has been released, be sure to check it out <a
-        href="sacr-wiki/wiki.html">here</a></p>
+    <p>The SACR Rig has been updated to Release 5, go check it out <a
+        href="sacr-rig.html">here</a></p>
+        <p>Promotional Art will be updated soon</p>
   </div>
   <div class="sideNav" id="sideNav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -102,8 +103,8 @@
         </div>
 
         <div class="rds-col">
-          <h1>Download SACR R4.2</h1>
-          <span class="file-details">File Size: 779 Kb |
+          <h1>Download SACR R5</h1>
+          <span class="file-details">File Size: 761 Kb |
             <a onclick="openText('sacr-changelog-latest')" class="download-extra">Changelog</a>
             |
             <a onclick="openExternal('github.com/SakuraSedaia/SACR-MC-Rig/','secure')" class="download-extra">GitHub
