SACR R5 Minor update

--- a/sacr-rig.html
+++ b/sacr-rig.html
@@ -56,9 +56,7 @@
         Contact
       </div>
     </nav>
-    <div class="header-contain" id="header" style="
-          background-image: url('assets/images/WPRenders/BarSet_Preview4.png');
-        ">
+    <div class="header-contain" id="header" style="background-image: url('assets/images/WPRenders/BarSet_Preview4.png');">
       <!-- Header Content -->
       <div class="header-content">
         <div class="header-text">
@@ -68,25 +66,19 @@
       </div>
     </div>
     <!-- End Header -->
+
     <div class="dev-warning" id="devWarning">
       <!-- HTML Not Displayed, Developer Mode Disabled -->
     </div>
 
     <div class="about-sacr">
-      <div class="title-sacr" style="
-            background-image: url(assets/images/MCRigBackgrouns/SACRThumbnail5.jpg);
-            background-position: center;
-            background-size: cover;
-          ">
+      <div class="title-sacr" style="background-image: url(assets/images/);background-position: center;background-size: cover;">
         <div class="title-text">
           <h1>Sakura's Advanced Character Rig</h1>
           <h3>
             Lightweight Advanced Minecraft Character Rig built and designed by
             an Animator for Animators
           </h3>
-          <div class="credit" onclick="openSACRPromotional()">
-            Splash Art by: Chiefsam34#9456
-          </div>
         </div>
         <div class="title-bg" style="
               background-image: url('assets/images/WPRenders/Sakura_EnderEgg_Discovery_V2.jpg');
@@ -97,8 +89,7 @@
       <div class="rig-download-section">
         <div class="rds-col">
           <div class="rds-background">
-            <img src="assets/images/Thumbnails/SACR R4.2 Promotional Art.jpg" width="540px" alt="background"
-              onclick="openSACRPromotional()" />
+            <img src="assets/images/Thumbnails/SACR R5 Promotional_951x536.jpg" width="540px" alt="SACR R5 Thumbnail"/>
           </div>
         </div>
 
